[package]
name = "volume-notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-std = { version = "1.11.0", features = ["attributes", "unstable"] }
clap = { version = "3.1.8", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.16"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
zbus = "2.1.1"
