[package]
name = "volume-notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
bincode = "1.3.3"
byte_string = "1.0.0"
clap = { version = "3.1.8", features = ["derive"] }
env_logger = "0.9.0"
futures-util = "0.3.21"
log = "0.4.16"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["macros", "net", "rt"] }
wasm_mutex = "0.1.1"
zbus = { version = "2.1.1", features = ["tokio"], default-features = false }
